Fix: Use local images instead of external URLs
- Downloaded 3 images from Unsplash to avoid CORS issues
- Updated HTML and JavaScript to use local image paths
- All images now load correctly on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1575429198097-0414ec08e8cd?w=800&q=80" alt="Professional pool maintenance">
+                    <img src="pool-maintenance.jpg" alt="Professional pool maintenance">
                     <div class="about-badge">
                         <span>Certified & Insured</span>
                     </div>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="construction">
-                    <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?w=800&q=80" alt="New Pool Construction">
+                    <img src="pool-construction.jpg" alt="New Pool Construction">
                     <div class="gallery-overlay">
                         <h3>New Construction</h3>
                         <p>Custom Pool Design</p>
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="maintenance">
-                    <img src="https://images.unsplash.com/photo-1622015663319-e97e697503ee?w=800&q=80" alt="Pool Cleaning Service">
+                    <img src="pool-cleaning.jpg" alt="Pool Cleaning Service">
                     <div class="gallery-overlay">
                         <h3>Deep Cleaning</h3>
                         <p>Professional Service</p>
